# InputProxy

./: LICENSE  README.md
Desktop/: Desktop.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Pico/: CMakeLists.txt
Pico/src/: PersistentStorage.cpp  PersistentStorage.h  Timer.cpp  Timer.h  UartManagerPico.cpp  UartManagerPico.h  UsbCdcManager.cpp  UsbCdcManager.h  mainPico.cpp  testFunctions.h  tusb_config.h  usb_descriptors.cpp
Pico/src/devices/: AbstractDeviceManager.cpp  AbstractDeviceManager.h  AbstractVirtualDevice.cpp  AbstractVirtualDevice.h  DeviceManager.cpp  DeviceManager.h  HidDeviceManager.cpp  HidDeviceManager.h  TinyUsbGamepadDevice.cpp  TinyUsbMouseDevice.h  (+12 more)
docs/: phase_1_plan.md
docs/superpowers/: ui_plan.md
mainboard/: CMakeLists.txt  config.json
mainboard/src/: Action.h  CoHttpServer.cpp  CoHttpServer.h  EmulatedDeviceManager.cpp  EmulatedDeviceManager.h  EmulationBoard.h  EventLoop.cpp  EventLoop.h  HotkeyPart.h  LayerManager.h  MainConfig.cpp  MainConfig.h  MainboardConfig.cpp  MainboardConfig.h  MappingManager.cpp  MappingManager.h  OutputSequenceParser.h  RealDeviceManager.cpp  RealDeviceManager.h  RestApi.cpp  RestApi.h  SequenceStep.h  UartManager.h  VirtualOutputDevice.cpp  main.cpp  rpcinterface.h  webtester.cpp  webtester.h
mainboard/src/emulation/: EmulatedDeviceManager.cpp  EmulatedDeviceManager.h  EmulationBoard.h  UartManager.h  VirtualOutputDevice.cpp  VirtualOutputDevice.h
mainboard/src/mapping/: AxisRule.cpp  AxisRule.h  BlockRule.h  HotkeyPart.h  Layer.h  LayerManager.cpp  LayerManager.h  MappingManager.cpp  MappingManager.h  OutputSequenceParser.cpp  TurboRule.h  VidStateMap.h  VodStateRule.h
mainboard/src/rest/: CoHttpServer.cpp  CoHttpServer.h  RestApi.cpp  RestApi.h
shared/: PicoConfig.cpp  PicoConfig.h  corocgo.cpp  crc32.h  kbdkeys.h  rpcinterface.h  shared.cpp  shared.h  stringutils.cpp  stringutils.h
shared/corocgo/: README.md  corocgo.cpp  corocgo.h  main_example.cpp
shared/simplerpc/: README.md  rpc_example_main.cpp  simplerpc.h
(+8 files in other folders)
